--- a/src/_tablet.scss
+++ b/src/_tablet.scss
@@ -6,6 +6,7 @@ $tablet-heading-height: 6rem;
 
 @mixin home-page-tablet(){
     @include bp.tablet{
+        padding-bottom: 0;
         #home-intro {
             display: grid;
             grid-template-columns: subgrid;
